--- a/src/app/layouts/Wilderlee/Wilderlee.module.css
+++ b/src/app/layouts/Wilderlee/Wilderlee.module.css
@@ -1,4 +1,5 @@
 .wilderlee{
+    padding-top: 7.031vw;
     position: relative;
     display: grid;
     place-items: center;
